# Fluent-Widgets

./: .gitignore  formate.py  pyproject.toml
examples/view/skeletion_screen/: demo.py
qfluentwidgets/: __init__.py
qfluentwidgets/_rc/: resource.py  resource_rc.py
qfluentwidgets/common/: __init__.py  animation.py  auto_wrap.py  color.py  config.py  exception_handler.py  file.py  font.py  icon.py  image_utils.py  overload.py  router.py  screen.py  smooth_scroll.py  style_sheet.py  theme_listener.py  translator.py
qfluentwidgets/common/animation/: __init__.py  v1.py
qfluentwidgets/components/date_time/: calendar_picker.py  calendar_view.py  date_picker.py  fast_calendar_view.py  picker_base.py  time_picker.py
qfluentwidgets/components/dialog_box/: color_dialog.py  dialog.py  folder_list_dialog.py  mask_dialog_base.py  message_box_base.py  message_dialog.py
qfluentwidgets/components/layout/: expand_layout.py  flow_layout.py  v_box_layout.py
qfluentwidgets/components/material/: acrylic_combo_box.py  acrylic_flyout.py  acrylic_line_edit.py  acrylic_menu.py  acrylic_tool_tip.py  acrylic_widget.py
qfluentwidgets/components/navigation/: breadcrumb.py  navigation_bar.py  navigation_interface.py  navigation_panel.py  navigation_widget.py  pivot.py  segmented_widget.py
qfluentwidgets/components/settings/: custom_color_setting_card.py  expand_setting_card.py  (+4 more)
qfluentwidgets/multimedia/: media_play_bar.py  media_player.py  video_widget.py
qfluentwidgets/window/: fluent_window.py  splash_screen.py  stacked_widget.py
scripts/: format_code.py
test/: skeleton.py
(+37 files in other folders)
